# Fantaman_Market_Manager

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .protection_orig.json  =2.0.0  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  README_CI.md  README_TESTING.md  alembic.ini  alembic_tmp.ini  app.py  apply_options_as_plusvalenza.py  apply_options_as_quiriti.py  apply_options_atletico_milo.py  apply_options_dude_fc.py  apply_options_fc_bioparco.py  apply_options_fc_pachuca.py  apply_options_good_old_boys.py  apply_options_nova_spes.py  docker-compose.yml  fix_rate_limiting.py  flask.out  importa_giocatori.py  migration_report_20250920_140634.csv  migration_report_20250920_140934.csv  migration_report_20250920_141350.csv  migration_report_20250920_165753.csv  migration_report_20250920_202220.csv  migration_report_20250921_093521.csv  migration_report_20250921_093609.csv  migration_report_20250922_130119.csv  migration_report_20250922_142936.csv  migration_sample_canonical_mappings_20250920_141425.csv  migration_sample_leagues_20250920_141425.csv  migration_sample_team_aliases_20250920_141425.csv  migration_sample_teams_20250920_141425.csv  (+19 more)
alembic/: README.md  env.py  script.py.mako
app/: __init__.py  admin.py  api.py  config.py  database.py  db.py  market.py  models.py  teams.py
data/: real_clubs.txt
docker/: Dockerfile.dev  docker-compose.dev.yml
docs/: REPOSITORY_GUIDELINES.md
scripts/: __init__.py  apply_canonical_mappings.py  apply_credito_one.py  crediti_proposed.json  db_migrate.py  debug_auth_decorator.py  dev_setup.sh  extract_crediti.py  (+13 more)
(+105 files in other folders)
